<resources>
    <string name="app_name">Hackeru Online</string>
    <string name="home">Home</string>
    <string name="lessons">Lessons</string>
    <string name="homework">Homework</string>
    <string name="projects">Projects</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>