<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/lessonsFragment"
        android:icon="@drawable/ic_lessons"
        android:title="@string/lessons"
        app:showAsAction="always"/>

    <item
        android:id="@+id/homeworkFragment"
        android:icon="@drawable/ic_laptop"
        android:title="@string/homework"
        app:showAsAction="always"/>

    <item
        android:id="@+id/projectsFragment"
        android:icon="@drawable/ic_projects"
        android:title="@string/projects"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always"/>


</menu>